Remove flags no longer applicable with Java 8