@@ -1,2 +1,2 @@
 #!/bin/sh
-exec java -jar -XX:MaxPermSize=256M -Xincgc -Xmx3g -jar forge.jar nogui
+exec java -Xmx3g -jar forge.jar nogui
